--- a/坑.md
+++ b/坑.md
@@ -5,3 +5,4 @@
 可能是npm安装不完整或损坏：npm install --global npm@latest 
 ### 3.运行npm install后卡住不动
 换成国内镜像:npm config set registry=https://registry.npmmirror.com
+## 2.记得开redis服务器
